[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "macpepdb"
description = "Package for building large peptide databases."
authors = [
    {name = "Dirk Winkelhardt", email="dirk.winkelhardt@rub.de"},
]
readme = "README.md"
requires-python = ">=3.9"
version = "2.2.0"
dependencies = [
    "alembic >=1, <2",
    "gunicorn >= 20.1, <20.2",
    "Flask >=1, <2",
    "markupsafe ==2.0.1",       # fix for `ImportError: cannot import name 'soft_unicode'
    "matplotlib >=3, <4",
    "piwikapi ==0.3",
    "PyYAML >=5, <6",
    "psycopg2 >=2, <3"
]

[project.optional-dependencies]
dev = [
    "honcho",
    "pylint",
    "requests"
]

[tool.setuptools.package-data]
macpepdb = [
    "documents/*.pdf"
]


[project.urls]
repository = "https://github.com/mpc-bioinformatics/macpepdb"

